kubernetes/namespaces/monitoring/grafana/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  ports:
    - port: 3000
  selector:
    app: grafana
